# insider-trades

./: .gitignore  .pre-commit-config.yaml  BUILD  Dockerfile  Dockerfile.prod  Makefile  README.md  WORKSPACE  deps.bzl  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum
.github/workflows/: ci.yml  ci_bazel.yml  deploy.yml
api/: BUILD.bazel  trade.pb.go  trade.proto  trade_grpc.pb.go
api-gateway-service/: Makefile
api-gateway-service/cmd/: main.go
api-gateway-service/config/: config.go  config.yml
api-gateway-service/internal/cache/: trade_cache.go
api-gateway-service/internal/controller/httpapi/: handle_list_trade_views.go  trade_view.go
api-gateway-service/internal/service/: gateway.go  interfaces.go
api/swagger/: BUILD.bazel  docs.go
frontend/: package-lock.json  package.json
frontend/insider-trades/: .editorconfig  .eslintrc.json  .gitignore  next.config.js.example  package-lock.json  package.json  tsconfig.json
frontend/insider-trades/components/: Footer.tsx  Header.tsx  Navbar.tsx  Search.tsx  SearchBar.tsx  TradeCard.tsx  TradesTable.tsx
frontend/insider-trades/components/buttons/: ShowMoreButton.tsx
frontend/insider-trades/components/dep/: NavAndSearch.tsx  Search.tsx
frontend/insider-trades/layouts/: Layout.tsx
frontend/insider-trades/pages/: _app.tsx  _document.tsx  index.tsx
frontend/insider-trades/store/: hooks.ts  store.ts  tradeViewsSlice.ts
frontend/insider-trades/styles/: globals.css
frontend/insider-trades/types/: tradeView.ts
pkg/: go.mod  go.sum
pkg/currency/: currency.go
pkg/httpserver/: BUILD.bazel
pkg/kafka/: BUILD.bazel  kafka.go
pkg/logger/: BUILD.bazel  zap.go
pkg/postgresql/: BUILD.bazel
pkg/rabbitmq/: BUILD.bazel  channel.go  client.go  server.go
pkg/redisdb/: redis.go
pkg/types/: cursor.go
pkg/types/cursor/: cursor.go
pkg/zap/: zap.go
telegram-notification-service/: .env.example  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
telegram-notification-service/cmd/: BUILD.bazel  main.go
telegram-notification-service/config/: BUILD.bazel  config.go  config.yml
telegram-notification-service/internal/app/: BUILD.bazel  app.go
telegram-notification-service/internal/controller/amqp/: BUILD.bazel  insider_trade.go  trades_consumer.go
telegram-notification-service/internal/controller/amqpconsumer/: BUILD.bazel  trades_consumer.go
telegram-notification-service/internal/entity/: BUILD.bazel  trade.go
telegram-notification-service/internal/service/: BUILD.bazel  interfaces.go  notification.go
telegram-notification-service/internal/telegram/: BUILD.bazel  tgbot_api.go
trades-receiver-service/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  Makefile  README.md  aletheiaapi.info  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
trades-receiver-service/cmd/: BUILD.bazel  main.go
trades-receiver-service/config/: BUILD.bazel  config.go  config.yml
trades-receiver-service/configs/: config.yml
trades-receiver-service/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
trades-receiver-service/internal/app/: BUILD.bazel  app.go
trades-receiver-service/internal/config/: config.go
trades-receiver-service/internal/controller/grpcapi/: insider_trade.go
trades-receiver-service/internal/controller/httpapi/: BUILD.bazel  handle_get_all_trades.go  handle_receive_trades.go  insider_trade.go
trades-receiver-service/internal/db/: postgresql.go
trades-receiver-service/internal/entity/: BUILD.bazel  company.go  insider.go  insider_trade.go  sec_filings.go  security_transaction_holdings.go  trade.go  transaction.go
trades-receiver-service/internal/logger/: logger.go
trades-receiver-service/internal/message/: BUILD.bazel  insider_trade_publish.go
trades-receiver-service/internal/repository/: BUILD.bazel  insider_trade.go
trades-receiver-service/internal/service/: BUILD.bazel  insider_trade.go  insider_trade_test.go  interfaces.go  mocks_test.go
trades-receiver-service/migrations/: 1_initialize_schema.down.sql  1_initialize_schema.up.sql  2_replace_transaction_created_at_index.down.sql  2_replace_transaction_created_at_index.up.sql  3_add_trades_materialized_view.down.sql  3_add_trades_materialized_view.up.sql  migrate.down.sql  migrate.up.sql
trades-receiver-service/pkg/httpserver/: BUILD.bazel  httpserver.go
trades-receiver-service/pkg/kafka/: BUILD.bazel  kafka.go
trades-receiver-service/pkg/logger/: BUILD.bazel  zap.go
trades-receiver-service/pkg/postgresql/: BUILD.bazel  postgresql.go
