load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    embed = [":api_go_proto"],
    importpath = "github.com/alexbobkovv/insider-trades/api",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "api_proto",
    srcs = ["trade.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "api_go_proto",
    importpath = "github.com/alexbobkovv/insider-trades/api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
)
