load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "zap",
    srcs = ["zap.go"],
    importpath = "github.com/alexbobkovv/insider-trades/pkg/zap",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
