load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/alexbobkovv/insider-trades/telegram-notification-service/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spf13_viper//:viper"],
)
