load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/alexbobkovv/insider-trades/trades-receiver-service/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//trades-receiver-service/config",
        "//trades-receiver-service/internal/app",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
