load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["app.go"],
    importpath = "github.com/alexbobkovv/insider-trades/telegram-notification-service/internal/app",
    visibility = ["//telegram-notification-service:__subpackages__"],
    deps = [
        "//pkg/rabbitmq",
        "//pkg/zap",
        "//telegram-notification-service/config",
    ],
)
