load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["app.go"],
    importpath = "github.com/alexbobkovv/insider-trades/trades-receiver-service/internal/app",
    visibility = ["//trades-receiver-service:__subpackages__"],
    deps = [
        "//pkg/rabbitmq",
        "//trades-receiver-service/config",
        "//trades-receiver-service/internal/controller/httpapi",
        "//trades-receiver-service/internal/message",
        "//trades-receiver-service/internal/repository",
        "//trades-receiver-service/internal/service",
        "//trades-receiver-service/pkg/httpserver",
        "//trades-receiver-service/pkg/logger",
        "//trades-receiver-service/pkg/postgresql",
        "@com_github_gorilla_mux//:mux",
    ],
)
