load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "message",
    srcs = ["insider_trade_publish.go"],
    importpath = "github.com/alexbobkovv/insider-trades/trades-receiver-service/internal/message",
    visibility = ["//trades-receiver-service:__subpackages__"],
    deps = [
        "//pkg/rabbitmq",
        "//trades-receiver-service/internal/entity",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
    ],
)
