load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "message",
    srcs = ["insider_trade_publish.go"],
    importpath = "github.com/alexbobkovv/insider-trades/trades-receiver-service/internal/message",
    visibility = ["//trades-receiver-service:__subpackages__"],
    deps = [
        "//api",
        "//pkg/rabbitmq",
        "//trades-receiver-service/config",
        "//trades-receiver-service/internal/entity",
        "@com_github_gofrs_uuid//:uuid",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
