load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["zap.go"],
    importpath = "github.com/alexbobkovv/insider-trades/trades-receiver-service/pkg/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
