load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "amqp",
    srcs = ["insider_trade.go"],
    importpath = "github.com/alexbobkovv/insider-trades/telegram-notification-service/internal/controller/amqp",
    visibility = ["//telegram-notification-service:__subpackages__"],
)
